# alienator-ghcjs

./: .project  LICENSE  README.md  Setup.hs  alienator.cabal  alienator.ccs  config.json  index.html  project.json
hs-bin/: alienator.hs
hs-src/Alienator/: Actuator.hs  Constants.hs  GamePlayScene.hs  Main.hs  PhysicsSprite.hs  Pool.hs
hs-test/: PoolSpec.hs
res/: Node.json  Skeleton.json  spaceship.json
src/: Main.hs
src/Alienator/: Actuator.hs  Bullet.hs  Constants.hs  GamePlayScene.hs  Main.hs  PhysicsSprite.hs  Pool.hs
test/: PoolSpec.hs  Spec.hs
