-- The name of the package.
name:                alienator

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            Alien-Terminators loaded with reflex-cocos2d

-- A longer description of the package.
-- description:         

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Lingnan Dai

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          lingnan.d@gmail.com

-- A copyright notice.
-- copyright:           

category:            Game

build-type:          Custom

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10

library
    hs-source-dirs   : hs-src
    default-language : Haskell2010
    ghc-options      : -Wall -O2 -fno-warn-name-shadowing -fno-warn-unused-do-bind
    exposed-modules  : Alienator.Main,
                       Alienator.Pool,
                       Alienator.Actuator,
                       Alienator.PhysicsSprite,
                       Alienator.GamePlayScene,
                       Alienator.Constants
    build-depends    : base,
                       containers,
                       transformers,
                       reflex,
                       reflex-cocos2d,
                       free,
                       array

executable alienator
    main-is          : alienator.hs
    hs-source-dirs   : hs-bin
    default-language : Haskell2010
    ghc-options      : -Wall -O2 -fno-warn-name-shadowing -fno-warn-unused-do-bind
    build-depends    : base, alienator
  
test-suite hspec
    type             : exitcode-stdio-1.0
    main-is          : Spec.hs
    hs-source-dirs   : hs-test
    default-language : Haskell2010
    ghc-options      : -Wall
    build-depends    : base,
                       alienator,
                       hspec
